modules/security-groups/main.tf
# create security group
# for the application load balancer
resource "aws_security_group" "alb_security_group" {
  name = "alb security group"
  description = "enable http/https access on port 80/443"
  vpc_id = var.vpc_id

  ingress {
    description = "http access"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "https access"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "alb security group"
  }

}

# security group
# for the container
resource "aws_security_group" "ecs_security_group" {
  name = "ecs_security_group"
  description = "enable http/https on port 80/443 vi alb SG"

  vpc_id = var.vpc_id

 ingress {
    description = "http access"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    security_groups =  [aws_security_group.alb_security_group.id]
  }

  ingress {
    description = "https access"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    security_groups   =   [aws_security_group.alb_security_group.id]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "ecs security group"
  }

}
